--- a/client/prototype/homepage.html
+++ b/client/prototype/homepage.html
@@ -26,12 +26,13 @@
                 </ul>
             </nav>
 
-            <!-- janbotron -->
-            <div class="jambotron">
-                <label>ようこそ　ラシキアゼミへ</label>
-            </div>
         </div>
-        
+
+        <!-- janbotron -->
+        <div class="jumbotron">
+            <label>ようこそ　ラシキアゼミへ</label>
+        </div>
+
         <div class="container">
             <!-- main content -->
             <div class="content">
@@ -47,6 +48,7 @@
             <div class="content">
                 <button class="btn btn-primary">ぷらいまり</button>
                 <div class="btn btn-primary">ぷら</div>
+                <div class="btn btn-success">みどりいろ</div>
             </div>
             <div class="content">
                 <table class="table-stripe">
@@ -101,6 +103,10 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+
+            <div class="content">
+                <input type="text" class="input-text" />
             </div>
         </div>
 
