--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Lashkia研究室</title>
+
+        <!-- reading css -->
+        <link rel="stylesheet" href="../src/css/homepage.css">
     </head>
+
     <body>
-        <div id="root"></div>
+        <div id="root">
+        </div>
     </body>
 </html>
